<resources>
    <string name="app_name">Calculator - Hide Media</string>
    <string name="ac">AC</string>
    <!--    <string name="round_bracket">( )</string>-->
    <!--    <string name="percent">%</string>-->
    <!--    <string name="divide">/</string>-->
    <!--    <string name="seven">7</string>-->
    <!--    <string name="eight">8</string>-->
    <!--    <string name="nine">9</string>-->
    <!--    <string name="multiple">x</string>-->
    <!--    <string name="four">4</string>-->
    <!--    <string name="five">5</string>-->
    <!--    <string name="six">6</string>-->
    <!--    <string name="minus">-</string>-->
    <!--    <string name="one">1</string>-->
    <!--    <string name="two">2</string>-->
    <!--    <string name="three">3</string>-->
    <!--    <string name="add">+</string>-->
    <!--    <string name="semicolon">,</string>-->
    <!--    <string name="zeros">0</string>-->
    <!--    <string name="equal">=</string>-->
    <string name="left_thesis">(</string>
    <string name="right_thesis">)</string>
    <string name="syntax_error">Syntax Error</string>
    <string name="domain_error">Domain Error</string>
    <string name="require_real_number">Real number required</string>
    <string name="division_by_0">Can\'t divide by 0</string>
    <string name="infinity">Infinity</string>
    <string name="value_too_large">Value too large</string>
    <string name="set_password">Set password</string>
    <string name="password_guide">Enter a 6-digit password and press \'=\'</string>
    <string name="fill_full_password">Please enter the complete 6-digit password to continue!</string>
    <string name="set_password_successfully">Set password successfully!</string>
    <string name="welcome">Welcome you</string>
    <string name="name">Incognito Calculator</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="file">File</string>
    <string name="note">Note</string>
    <string name="secret_note">Secret note</string>
    <string name="tv_detail">Thật sự là hôm nay mình buồn lắm mọi người ạ! Mình muốn tím ai đó để sẻ chia, cậu có muốn nghe mình tâm sự không?</string>
    <string name="time">2023-12-28 11:07 PM</string>
    <string name="title_note">Hôm nay tôi buồn!</string>
    <string name="save">Save</string>
    <string name="input_title_note">Enter the note title</string>
    <string name="input_detail_note">Enter your note…</string>
    <string name="no_empty_title">The title must not be empty!</string>
    <string name="no_empty_detail">The note content must not be empty!</string>
    <string name="counter_title_length">The note title must not exceed 40 characters in length.</string>
    <string name="save_note_successfully">Save successfully!</string>
    <string name="update_note_successfully">Update successfully</string>
    <string name="ask_delete_note">Delete note</string>
    <string name="msg_delete_note">You will not be able to recover the note.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleted">Deleted</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change password</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="rate_5_stars">Rate 5 stars</string>
    <string name="share_app">Share app</string>
    <string name="choose_language">Choose Language</string>
    <string name="tv_permission_request">Permission Request</string>
    <string name="go_to_setting_message">This permission is needed, please go to setting and grant permission</string>
    <string name="all">ALL</string>
    <string name="saved">Saved</string>
    <string name="empty">Empty!!!</string>
    <string name="ask_delete_hidden">You will not be able to recover the hidden files!</string>
    <string name="msg_delete_hidden">Delete hidden file</string>
    <string name="saved_video">Saved Video</string>
    <string name="message_purchase_one">%s</string>
</resources>