<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_80sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_20sdp"
    app:strokeWidth="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_note"
            android:textColor="@color/black"
            android:fontFamily="@font/san_regular"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/_64sdp"
            android:layout_toStartOf="@id/delete"
            android:text="@string/tv_detail"
            android:maxLines="1"
            android:textColor="@color/black"
            android:fontFamily="@font/san_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:maxLines="1"
            android:textColor="@color/black"
            android:fontFamily="@font/san_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_below="@id/tv_detail"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/recycle_bin"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>