<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_16sdp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/san_regular"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/san_regular"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/gl1"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox.Dense"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:boxStrokeColor="@color/black"
        android:hint="@string/input_title_note"
        app:hintTextColor="@color/black"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gl1"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/grey"
        style="@style/Base.Theme.HideCalculator">

        <EditText
            android:id="@+id/edt_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="5000"
            android:layout_margin="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/san_regular"
            android:hint="@string/input_detail_note"
            android:gravity="top|start"
            android:autofillHints="false"
            tools:ignore="RtlCompat"
            android:inputType="text|textMultiLine|textCapSentences"
            android:background="@null"/>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_error_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/red_equal_button"
        app:layout_constraintTop_toBottomOf="@id/cv_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/san_regular"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>


</androidx.constraintlayout.widget.ConstraintLayout>