<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_16sdp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/san_regular"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/tvCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_gravity="center"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/img_coin"/>


        <ImageView
            android:id="@+id/img_coin"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:src="@drawable/ic_coin"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <ImageView
            android:id="@+id/iv_key"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/key"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_toEndOf="@id/iv_key"
            android:layout_marginStart="@dimen/_32sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/san_regular"/>

    </RelativeLayout>

<!--    <RelativeLayout-->
<!--        android:id="@+id/layout_language"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/layout_change_password"-->
<!--        android:layout_marginBottom="@dimen/_16sdp"-->
<!--        android:layout_marginTop="@dimen/_32sdp"-->
<!--        android:layout_marginHorizontal="@dimen/_16sdp">-->

<!--        <ImageView-->
<!--            android:id="@+id/flag"-->
<!--            android:layout_width="@dimen/_24sdp"-->
<!--            android:layout_height="@dimen/_24sdp"-->
<!--            android:src="@drawable/vietnam"/>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/vietnamese"-->
<!--            android:layout_toEndOf="@id/flag"-->
<!--            android:layout_marginStart="@dimen/_32sdp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:textSize="@dimen/_16sdp"-->
<!--            android:fontFamily="@font/san_regular"/>-->

<!--    </RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/layout_rate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_change_password"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <ImageView
            android:id="@+id/rate"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/star"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_5_stars"
            android:layout_toEndOf="@id/rate"
            android:layout_marginStart="@dimen/_32sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/san_regular"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_rate"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <ImageView
            android:id="@+id/share"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/next"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:layout_toEndOf="@id/share"
            android:layout_marginStart="@dimen/_32sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/san_regular"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>